small changes on home page and nav design

--- a/frontend/src/css/Header.css
+++ b/frontend/src/css/Header.css
@@ -1,5 +1,5 @@
 header {
-    padding: 1rem 2rem;
+    padding: 2rem 2rem;
     background-color: #141619;
     color: white;
 }
@@ -13,15 +13,15 @@ header nav {
 .nav-left, .nav-right {
     display: flex;
     align-items: center;
-    gap: 0.5rem;
+    gap: 2rem;
 }
 
 header nav a,
 header nav button {
+    font-weight: 500;
     background-color: #0A21C0;
     color: white;
-    border-radius: 10px;
-    padding: 0.5rem 1rem;
+    padding: 0.5rem 2rem;
     text-decoration: none;
     border: none;
     cursor: pointer;
@@ -34,5 +34,5 @@ header nav a:hover {
 
 .guestButtons {
     display: flex;
-    gap: 0.5rem;
+    gap: 2rem;
 }
