--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,8 @@
 body {
-  font-family: 'Roboto', Arial, sans-serif;
+  font-family: 'Neue Haas Grotesk Display Pro', Arial, sans-serif;
   margin: 0;
   background-color: #B3B4BD;
+  font-weight: 400;
 }
 form {
   max-width: 300px;
