--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,10 @@
-#root {
-  /* max-width: 1280px/; */
-  margin: 0 auto;
+.page-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
   text-align: center;
 }
 
+.content-wrap {
+  flex: 1;
+}
