--- a/frontend/src/css/Home.css
+++ b/frontend/src/css/Home.css
@@ -2,6 +2,7 @@
 .jumbotron {
     background-color: #f8f9fa;
     padding: 6rem 2rem;
+    height: 100%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
@@ -15,6 +16,7 @@
         align-items: center;
         text-align: center;
     }
+
     @media (max-width: 576px) {
         padding: 1rem 0.5rem;
         font-size: 0.9rem;
