--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,15 +1,7 @@
-body {
+html, body {
   font-family: 'Neue Haas Grotesk Display Pro', Arial, sans-serif;
-  margin: 0;
   background-color: #B3B4BD;
+  height: 100%;
+  margin: 0;
   font-weight: 400;
-}
-form {
-  max-width: 300px;
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-form input, form button {
-  padding: 8px;
 }
