--- a/frontend/src/css/Tracker.css
+++ b/frontend/src/css/Tracker.css
@@ -104,6 +104,7 @@ tbody tr:hover {
   width: 100%;
   max-width: 500px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+  align-content: center;
 }
 
 .modal-content h3 {
@@ -116,41 +117,46 @@ tbody tr:hover {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  align-items: center;
 }
 
 .modal-content input,
 .modal-content select {
   padding: 0.5rem;
   border-radius: 4px;
+  box-sizing: border-box;
   border: 1px solid #ccc;
   font-size: 1rem;
+  width: 100%;
 }
 
 .modal-content button {
   padding: 0.5rem 1rem;
-  border: none;
+  border: 1px solid #0A21C0;
+  width: 50%;
   border-radius: 6px;
   cursor: pointer;
   font-weight: 500;
   transition: background-color 0.2s;
+  font-size: 16px;
 }
 
 .modal-content button[type="submit"] {
-  background-color: #28a745;
+  background-color: #0A21C0;
   color: white;
 }
 
 .modal-content button[type="submit"]:hover {
-  background-color: #218838;
+  background-color: #0056b3;
 }
 
 .modal-content button[type="button"] {
-  background-color: #dc3545;
-  color: white;
+  background-color: #f1f1f1;
+  color: black;
 }
 
 .modal-content button[type="button"]:hover {
-  background-color: #c82333;
+  background-color: #ffff;
 }
 
 .add-button {
