--- a/frontend/src/css/Summary.css
+++ b/frontend/src/css/Summary.css
@@ -11,6 +11,11 @@
 
 .summary-header h1 {
     color: #0A21C0;
+    font-size: 2.5rem;
+}
+
+.summary-header p {
+    font-size: 1.5rem;
 }
 
 .summary-section {
